--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vite-plugin-eslint": "^1.8.1",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.21",
+    "vue-i18n": "9",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
