--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metafront",
+  "name": "shwifty",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -12,7 +12,7 @@
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
-    "lint": "eslint metaFront --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint": "eslint src --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src"
   },
   "dependencies": {
@@ -31,6 +31,7 @@
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.11.28",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/compiler-sfc": "^3.4.23",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.5",
@@ -44,7 +45,7 @@
     "prettier": "^3.0.3",
     "sass": "^1.72.0",
     "start-server-and-test": "^2.0.3",
-    "typescript": "~5.4.0",
+    "typescript": "~5.4.3",
     "vite": "^5.1.6",
     "vite-plugin-vue-devtools": "^7.0.18",
     "vitest": "^1.4.0",
