--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,7 +7,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "types/**/*.d.ts",
+    "src/types/**/*.d.ts",
     "vite.config.ts",
     "vitest.config.ts"
   ],
