--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   },
   "dependencies": {
     "@metamask/sdk": "^0.18.1",
+    "@vee-validate/yup": "^4.12.6",
     "@vueuse/core": "^10.9.0",
     "pinia": "^2.1.7",
+    "vee-validate": "^4.12.6",
     "vite-plugin-eslint": "^1.8.1",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.21",
     "vue-i18n": "9",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
