--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
+  "files": [],
   "compilerOptions": {
     "target": "esnext",
     "useDefineForClassFields": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
-    /** TS 严格模式 */
+    "moduleResolution": "node",
     "strict": true,
     "jsx": "preserve",
     "jsxImportSource": "vue",
     "importHelpers": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
@@ -20,7 +20,8 @@
     "types": [
       "node",
       "vite/client",
-      "vitest"
+      "vitest",
+      "cypress"
     ],
     "baseUrl": ".",
     "paths": {
@@ -37,5 +38,16 @@
     "vite.config.ts",
     "vitest.config.ts"
   ],
-  "exclude": ["node_modules", "dist"]
+//  "exclude": ["node_modules", "dist"],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    },
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.vitest.json"
+    }
+  ]
 }
